@@ -4,6 +4,9 @@
 
 Version 5.11
 
+New: Sieve protocol test implemented. Usage:
+    if failed port 2000 protocol sieve then alert
+
 
 Version 5.10
 
